fix button alignment for inline-form-wrapper (#81)
* fix button allignment for form-wrapper

--- a/src/common/sass/form.scss
+++ b/src/common/sass/form.scss
@@ -176,6 +176,10 @@
     cursor: not-allowed;
   }
 
+  &::placeholder {
+    font-family: "OpenSans-Regular, Helvetica, Arial, sans-serif";
+  }
+
   &__help-block {
     color: $text-color;
     font-style: italic;
@@ -200,6 +204,7 @@ select {
 
   > button {
     margin-left: 10px;
+    margin-bottom: 20px;
   }
 }
 
